Change labels on form to have margin-top instead of being wrapped in a div with align-items. Fixes bug where labels move when an error appears on the form

--- a/src/App.css
+++ b/src/App.css
@@ -587,7 +587,6 @@ button:focus {
 .form-section {
   margin: 0 auto;
   padding: 10px 0px;
-  align-items: center;
 }
 
 .form-section__error {
@@ -666,6 +665,7 @@ button:focus {
   display: block;
   font-weight: bold;
   font-size: 16px;
+  margin-top: 10px;
 }
 
 .main {
